Updated email-initial and email-thank-you-and-survey
Updated above files with 2021 wording.

Signed-off-by: Harrison Cabral <44628007+Alchemyst19@users.noreply.github.com>

--- a/pds-queries/2021-stewardship/email-initial.html
+++ b/pds-queries/2021-stewardship/email-initial.html
@@ -386,18 +386,15 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">Dear {family_names} household:</span></div>
 <div><br></div>
 <div>
-<span style="font-size: 16px; color: rgb(0, 0, 0);">Welcome to our </span><span style="font-size: 16px; color: rgb(0, 0, 0); font-style: italic;">ONLINE</span><span style="font-size: 16px; color: rgb(0, 0, 0);"> Annual Stewardship Renewal for 2020!&#xa0;We are very excited to launch online Stewardship this year in an effort to be more environmentally friendly and cost effective.&#xa0;Thank you for your support with this new initiative!</span>
+<span style="font-size: 16px; color: rgb(0, 0, 0); text-decoration: underline;">Back by Popular demand! Welcome to our </span><span style="font-size: 16px; color: rgb(0, 0, 0); font-style: italic; text-decoration: underline;">ONLINE</span><span style="font-size: 16px; color: rgb(0, 0, 0); text-decoration: underline;"> Annual Stewardship Renewal for 2021!&#xa0;We are very excited to use Online Stewardship again this year reinforcing our  effort to be more environmentally friendly and cost effective.&#xa0;Thanks in advance for your support of this initiative!</span>
 </div>
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 1:</span></div>
+<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 1: Prayer and Participation</span></div>
 <div>
 
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first
-  part is the Individual Ministry Participation Renewal.  Click on each of the members of
-  your household, below.&#xa0;</span> <span style="font-size: 16px; color:
-  rgb(0, 0, 0); font-style: italic">When you finish one person, you will
-  need to come back to this original email and click the next person
-  in your household.</span></div>
+  part is your individual "Prayer" intentions and Individual Ministry Participation Renewal.  Click the link below to get started.&#xa0;</span> <span style="font-size: 16px; color:
+  rgb(0, 0, 0); font-style: italic">If you need to come back to this form prior to submitting, a save button is available at the bottom of each page.</span></div>
 
 <div><br></div>
 
@@ -408,17 +405,17 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 
 <div><br></div>
 <ol>
-{member_links}
+{one-big-family-ministries-link}
 </ol>
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 2:</span></div>
+<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 2: Generosity</span></div>
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">Once
-    you&#x2019;ve completed each individual listed above, click on the
-    link below to make your 2020 financial pledge.</span></div>
+    you&#x2019;ve completed your family's ministry form, click on the
+    link below to make your 2021 financial pledge.</span></div>
 <div><br></div>
 <div align="center"><span style="font-size: 18px; color: rgb(0, 112, 192);">{family_pledge_link}</span></div>
 <div><br></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">THANK YOU FOR PARTICIPATING in the 2020 Annual Stewardship Renewal!</span></div>
+<div><span style="font-size: 16px; color: rgb(0, 0, 0);">THANK YOU FOR PARTICIPATING in the 2021 Annual Stewardship Renewal!</span></div>
 <br>
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">In gratitude,</span></div>
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">Stewardship &amp; Evangelization Committee</span></div>
@@ -426,8 +423,7 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <div>
 <span style="font-size: 13px; color: rgb(0, 0, 0);">If you have any
   questions regarding this email or the information herein, please
-  contact Erin Dwyer, Pastoral Associate of Stewardship &amp;
-  Evangelization at +1 502-245-9733 x14 or </span><a href="mailto:erin@epiphanycatholicchurch.org" target="_blank" style="font-size: 13px; color: rgb(5, 99, 193); text-decoration: none; font-weight: normal; font-style: normal;">erin@epiphanycatholicchurch.org</a><span style="font-size: 13px; color: rgb(0, 0, 0);">.&#xa0;&#xa0;</span>
+  contact ____________, Director of Parish Engagement at +1 502-_________</span>
 </div>
 <div><br></div>
 </div></div>
