--- a/pds-queries/2021-stewardship/email-thank-you-and-survey.html
+++ b/pds-queries/2021-stewardship/email-thank-you-and-survey.html
@@ -388,7 +388,7 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 
 <div>
   <span style="font-size: 16px; color: rgb(0, 0, 0);">
-    Thank you so much for completing the 2020 Online Stewardship
+    Thank you so much for completing the 2021 Online Stewardship
     Renewal!  Please know that you are a valued member of this
     community.  Your commitment of prayer, participation, and
     generosity is essential to carry on the Lord's work in this
@@ -439,8 +439,7 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <div>
 <span style="font-size: 13px; color: rgb(0, 0, 0);">If you have any
   questions regarding this email or the information herein, please
-  contact Erin Dwyer, Pastoral Associate of Stewardship &amp;
-  Evangelization at +1 502-245-9733 x14 or </span><a href="mailto:erin@epiphanycatholicchurch.org" target="_blank" style="font-size: 13px; color: rgb(5, 99, 193); text-decoration: none; font-weight: normal; font-style: normal;">erin@epiphanycatholicchurch.org</a><span style="font-size: 13px; color: rgb(0, 0, 0);">.&#xa0;&#xa0;</span>
+  contact ____________, Director of Parish Engagement at +1 502-___________</span>
 </div>
 <div><br></div>
 </div></div>
