--- a/pds-queries/2021-stewardship/email-3rd-reminder.html
+++ b/pds-queries/2021-stewardship/email-3rd-reminder.html
@@ -391,19 +391,18 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <div><br></div>
 
 <div>
-<span style="font-size: 16px; color: rgb(0, 0, 0);">Welcome to our </span><span style="font-size: 16px; color: rgb(0, 0, 0); font-style: italic;">ONLINE</span><span style="font-size: 16px; color: rgb(0, 0, 0);"> Annual Stewardship Renewal for 2020!&#xa0;We are very excited to launch online Stewardship this year in an effort to be more environmentally friendly and cost effective.&#xa0;Thank you for your support with this new initiative!</span>
+<span style="font-size: 16px; color: rgb(0, 0, 0);"> Back by Popular demand! Welcome to our </span><span style="font-size: 16px; color: rgb(0, 0, 0); font-style: italic;">ONLINE</span><span style="font-size: 16px; color: rgb(0, 0, 0);"> Annual Stewardship Renewal for 2021!&#xa0;We are very excited to use Online Stewardship again this year, reinforcing our effort to be more environmentally friendly and cost effective.&#xa0;Thanks in advance for your support of this initiative!</span>
 </div>
 
 <div><br></div>
 
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 1:</span></div>
+<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 1: Prayer & Participation</span></div>
 
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first
-  part is the Individual Ministry Participation Renewal.  Click on each of the members of
-  your household, below.&#xa0;</span> <span style="font-size: 16px; color:
-  rgb(0, 0, 0); font-style: italic">When you finish one person, you will
-  need to come back to this original email and click the next person
-  in your household.</span></div>
+<div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first part is your
+individual "Prayer" intentions and Individual Ministry Participation Renewal. Click
+the link below to start. If you need to leave the form and come back later, a save
+button will be available on every page.</span> <span style="font-size: 16px; color:
+  rgb(0, 0, 0); font-style: italic"></span></div>
 
 <div><br></div>
 
@@ -417,14 +416,14 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 {member_links_reminders}
 </ol>
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 2:</span></div>
+<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 2: Generosity</span></div>
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">Once
-    you&#x2019;ve completed each individual listed above, click on the
-    link below to make your 2020 financial pledge.</span></div>
+    you&#x2019;ve completed the section above, click on the
+    link below to make your 2021 financial pledge.</span></div>
 <div><br></div>
 <div align="center"><span style="font-size: 18px; color: rgb(0, 112, 192);">{family_pledge_link_reminder}</span></div>
 <div><br></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">THANK YOU FOR PARTICIPATING in the 2020 Annual Stewardship Renewal!</span></div>
+<div><span style="font-size: 16px; color: rgb(0, 0, 0);">THANK YOU FOR PARTICIPATING in the 2021 Annual Stewardship Renewal!</span></div>
 <br>
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">In gratitude,</span></div>
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">Stewardship &amp; Evangelization Committee</span></div>
@@ -432,8 +431,8 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <div>
 <span style="font-size: 13px; color: rgb(0, 0, 0);">If you have any
   questions regarding this email or the information herein, please
-  contact Erin Dwyer, Pastoral Associate of Stewardship &amp;
-  Evangelization at +1 502-245-9733 x14 or </span><a href="mailto:erin@epiphanycatholicchurch.org" target="_blank" style="font-size: 13px; color: rgb(5, 99, 193); text-decoration: none; font-weight: normal; font-style: normal;">erin@epiphanycatholicchurch.org</a><span style="font-size: 13px; color: rgb(0, 0, 0);">.&#xa0;&#xa0;</span>
+  contact ??? &amp;
+  Evangelization at ??? or </span><a href="mailto:erin@epiphanycatholicchurch.org" target="_blank" style="font-size: 13px; color: rgb(5, 99, 193); text-decoration: none; font-weight: normal; font-style: normal;">erin@epiphanycatholicchurch.org</a><span style="font-size: 13px; color: rgb(0, 0, 0);">.&#xa0;&#xa0;</span>
 </div>
 <div><br></div>
 </div></div>
