stewardship 2021: updated reminder emails
Updated the text in the reminder emails for 2021 and single link.

Signed-off-by: Victoria <victoria@cabral.org>

--- a/pds-queries/2021-stewardship/email-1st-reminder.html
+++ b/pds-queries/2021-stewardship/email-1st-reminder.html
@@ -400,8 +400,7 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first part is your
 individual "Prayer" intentions and Individual Ministry Participation Renewal. Click
-the link below to start. If you need to leave the form and come back later, a save
-button will be available on every page.</span> <span style="font-size: 16px; color:
+the link below to begin.</span> <span style="font-size: 16px; color:
   rgb(0, 0, 0); font-style: italic"></span></div>
 
 <div><br></div>
@@ -416,7 +415,7 @@ button will be available on every page.</span> <span style="font-size: 16px; col
 {member_links_reminders}
 </ol>
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 2:</span></div>
+<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 2: Generosity</span></div>
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">Once
     you&#x2019;ve completed the section above, click on the
     link below to make your 2021 financial pledge.</span></div>
