--- a/pds-queries/2021-stewardship/email-2nd-reminder.html
+++ b/pds-queries/2021-stewardship/email-2nd-reminder.html
@@ -400,8 +400,7 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first part is your
 individual "Prayer" intentions and Individual Ministry Participation Renewal. Click
-the link below to start. If you need to leave the form and come back later, a save
-button will be available on every page.</span> <span style="font-size: 16px; color:
+the link below to begin.</span> <span style="font-size: 16px; color:
   rgb(0, 0, 0); font-style: italic"></span></div>
 
 <div><br></div>
