--- a/pds-queries/2021-stewardship/email-4th-reminder.html
+++ b/pds-queries/2021-stewardship/email-4th-reminder.html
@@ -404,8 +404,7 @@ Thank you for your generosity and support of our parish!</span></div>
 
 <div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first part is your
 individual "Prayer" intentions and Individual Ministry Participation Renewal. Click
-the link below to start. If you need to leave the form and come back later, a save
-button will be available on every page.</span> <span style="font-size: 16px; color:
+the link below to begin.</span> <span style="font-size: 16px; color:
   rgb(0, 0, 0); font-style: italic"></span></div>
 
 <div><br></div>
