--- a/pds-queries/2021-stewardship/email-test.html
+++ b/pds-queries/2021-stewardship/email-test.html
@@ -171,7 +171,7 @@ width: auto !important; margin-left: auto !important; margin-right: auto !import
 padding-bottom: 15px !important;
 }
 .editor-text {
-font-size: 16px !important;
+font-size: 14px !important;
 }
 .editor-divider {
 padding: 10px 0px 10px 0px !important;
@@ -204,7 +204,7 @@ padding: 0px 20px !important;
 font-size: 20px !important;
 }
 .feature-text {
-font-size: 16px !important;
+font-size: 14px !important;
 }
 .split.editor-col {
 margin-top: 0px !important;
@@ -222,7 +222,7 @@ padding-top: 0px !important; padding-bottom: 0px !important;
 font-size: 20px !important;
 }
 .article-text {
-font-size: 16px !important;
+font-size: 14px !important;
 }
 .social-container {
 text-align: center !important;
@@ -380,72 +380,61 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <table width="100%" style="min-width: 100%;" cellpadding="0" cellspacing="0" border="0">
 <tbody>
 <tr>
-<td class="editor-text editor-text " align="left" valign="top" style="font-family: Arial, Verdana, Helvetica, sans-serif; font-size: 12px; color: #403F42; text-align: left; display: block; word-wrap: break-word; line-height: 1.2; padding: 10px 20px;">
+<td class="editor-text editor-text " align="left" valign="top" style="font-family: Lucida Grande, sans-serif; font-size: 12px; color: #403F42; text-align: left; display: block; word-wrap: break-word; line-height: 1.2; padding: 10px 20px;">
 <div></div>
-
-
-<div align="center">
-  <span style="font-size: 24px; color: rgb(255, 0, 0);">TEST TEST TEST</span>
-</div>
-<div>
-  <span style="font-size: 16px; color: rgb(255, 0, 0);">This email is
-    a test before Epiphany's actual Stewardship 2020 campaign.  Please
-    read the email below, test all the links, check for typos, etc.
-    You can send feedback by replying to this email or directly
-    emailing
-    <a href="mailto:stewardship2020@epiphanycatholicchurch.org">stewardship2020@epiphanycatholicchurch.org</a>
-    before midnight on Tuesday, 17 Sep 2019.  THANK YOU!</span>
-</div>
-<div><br></div>
-
-
 <div class="text-container galileo-ap-content-editor"><div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Dear {family_names} household:</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">Dear {family_names} household:</span></div>
 <div><br></div>
 <div>
-<span style="font-size: 16px; color: rgb(0, 0, 0);">Welcome to our </span><span style="font-size: 16px; color: rgb(0, 0, 0); font-style: italic;">ONLINE</span><span style="font-size: 16px; color: rgb(0, 0, 0);"> Annual Stewardship Renewal for 2020!&#xa0;We are very excited to launch online Stewardship this year in an effort to be more environmentally friendly and cost effective.&#xa0;Thank you for your support with this new initiative!</span>
+
+<span style="font-size: 14px; color: rgb(255, 0, 0);"><strong>This is a test email that is being sent to the members of the Stewardship Committee and Finance Council (AND THEIR SPOUSES/PARTNERS) before we send it to the entire parish!</strong>
+
+    <div><br></div>
+
+    Please look over this email and click through to the stewardship renewal form to see your household's stewardship data.  Feel free to edit and submit as many times as you like; this is only a test (none of the test data will be kept).
+
+    <div><br></div>
+
+    We would like your feedback on the language in the email below, the language on the stewardship renewal form, the language of the "thank you for submitting" page, the language in the "we got your submission" acknowledgement email, etc.  Please send any typos / corrections / comments to <a href="mailto:stewardship2021@epiphanycatholicchurch.org">stewardship2021@epiphanycatholicchurch.org</a> by COB Friday, 28 Aug, 2020.  <strong>THANK YOU!</strong></span>
 </div>
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Step 1:</span></div>
+
 <div>
-
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first
-  step is completing the Individual Ministry Participation Renewal for
-  each member of your household by clicking on each of members of
-  your household, below.&#xa0;</span> <span style="font-size: 16px; color:
-  rgb(0, 0, 0); font-style: italic">When you finish one person, you will
-  need to come back to this original email and click the next person
-  in your household.</span></div>
-
+<span style="font-size: 14px; color: rgb(0, 0, 0);">Back by Popular
+demand! Welcome to our </span><span style="font-size: 14px; color:
+rgb(0, 0, 0); font-style: italic; text-decoration:
+underline;">ONLINE</span><span style="font-size: 14px; color: rgb(0,
+0, 0);"> Stewardship Renewal for
+2021! We are very excited to use Online Stewardship again this year
+reinforcing our effort to be more environmentally friendly and cost
+effective.</span>
+</div>
 <div><br></div>
 
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Be sure to
-  look for &#x201c;NEW&#x201d; next to a variety of ministries!  These
-  are NEW to the parish and provide additional opportunities to
-  serve.&#xa0;&#xa0;</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">Be sure to
+look for "NEW" next to a variety of ministries! These are NEW to the
+parish and provide additional opportunities to serve.</span></div>
 
 <div><br></div>
-<ol>
-{member_links}
-</ol>
+
+<div align="center"><span style="font-size: 18px; color: rgb(0, 112, 192);">{bounce_url}</span></div>
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Step 2:</span></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Once
-    you&#x2019;ve completed each individual listed above, click on the
-    link below to make your 2020 financial pledge.</span></div>
-<div><br></div>
-<div align="center"><span style="font-size: 18px; color: rgb(0, 112, 192);">{family_pledge_link}</span></div>
-<div><br></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">THANK YOU FOR PARTICIPATING in the 2020 Annual Stewardship Renewal!</span></div>
+
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);"><strong>THANK
+    YOU IN ADVANCE FOR COMPLETING YOUR 2021 Stewardship
+    Renewal!</strong></span></div>
 <br>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">In gratitude,</span></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Stewardship &amp; Evangelization Committee</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">In gratitude,</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">Stewardship &amp; Evangelization Committee</span></div>
 <div><br></div>
+
 <div>
 <span style="font-size: 13px; color: rgb(0, 0, 0);">If you have any
   questions regarding this email or the information herein, please
-  contact Erin Dwyer, Pastoral Associate of Stewardship &amp;
-  Evangelization at +1 502-245-9733 x14 or </span><a href="mailto:erin@epiphanycatholicchurch.org" target="_blank" style="font-size: 13px; color: rgb(5, 99, 193); text-decoration: none; font-weight: normal; font-style: normal;">erin@epiphanycatholicchurch.org</a><span style="font-size: 13px; color: rgb(0, 0, 0);">.&#xa0;&#xa0;</span>
+  contact Angie Fox, Director of Parish Engagement, <a href="mailto:angie@epiphanycatholicchurch.org"
+  target="_blank" style="font-size: 13px; color: rgb(5, 99, 193);
+  text-decoration: none; font-weight: normal; font-style:
+  normal;">angie@epiphanycatholicchurch.org</a>, +1 502-780-1012.</span>
 </div>
 <div><br></div>
 </div></div>
