--- a/pds-queries/2021-stewardship/email-initial.html
+++ b/pds-queries/2021-stewardship/email-initial.html
@@ -171,7 +171,7 @@ width: auto !important; margin-left: auto !important; margin-right: auto !import
 padding-bottom: 15px !important;
 }
 .editor-text {
-font-size: 16px !important;
+font-size: 14px !important;
 }
 .editor-divider {
 padding: 10px 0px 10px 0px !important;
@@ -204,7 +204,7 @@ padding: 0px 20px !important;
 font-size: 20px !important;
 }
 .feature-text {
-font-size: 16px !important;
+font-size: 14px !important;
 }
 .split.editor-col {
 margin-top: 0px !important;
@@ -222,7 +222,7 @@ padding-top: 0px !important; padding-bottom: 0px !important;
 font-size: 20px !important;
 }
 .article-text {
-font-size: 16px !important;
+font-size: 14px !important;
 }
 .social-container {
 text-align: center !important;
@@ -380,50 +380,56 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <table width="100%" style="min-width: 100%;" cellpadding="0" cellspacing="0" border="0">
 <tbody>
 <tr>
-<td class="editor-text editor-text " align="left" valign="top" style="font-family: Arial, Verdana, Helvetica, sans-serif; font-size: 12px; color: #403F42; text-align: left; display: block; word-wrap: break-word; line-height: 1.2; padding: 10px 20px;">
+<td class="editor-text editor-text " align="left" valign="top" style="font-family: Lucida Grande, sans-serif; font-size: 14px; color: #403F42; text-align: left; display: block; word-wrap: break-word; line-height: 1.2; padding: 10px 20px;">
 <div></div>
 <div class="text-container galileo-ap-content-editor"><div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Dear {family_names} household:</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">Dear {family_names}:</span></div>
 <div><br></div>
 <div>
-<span style="font-size: 16px; color: rgb(0, 0, 0); text-decoration: underline;">Back by Popular demand! Welcome to our </span><span style="font-size: 16px; color: rgb(0, 0, 0); font-style: italic; text-decoration: underline;">ONLINE</span><span style="font-size: 16px; color: rgb(0, 0, 0); text-decoration: underline;"> Annual Stewardship Renewal for 2021!&#xa0;We are very excited to use Online Stewardship again this year reinforcing our  effort to be more environmentally friendly and cost effective.&#xa0;Thanks in advance for your support of this initiative!</span>
+
+<span style="font-size: 14px; color: rgb(0, 0, 0);">Back by popular
+demand! Welcome to our </span><span style="font-size: 14px; color:
+rgb(0, 0, 0); font-style: italic; text-decoration:
+underline;">ONLINE</span><span style="font-size: 14px; color: rgb(0,
+0, 0);"> Stewardship Renewal for
+2021! We are very excited to use Online Stewardship again this year,
+reinforcing our effort to be more environmentally friendly and cost
+effective.</span>
 </div>
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 1: Prayer and Participation</span></div>
-<div>
 
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">The first
-  part is your individual "Prayer" intentions and Individual Ministry Participation Renewal.  Click the link below to get started.&#xa0;</span> <span style="font-size: 16px; color:
-  rgb(0, 0, 0); font-style: italic">If you need to come back to this form prior to submitting, a save button is available at the bottom of each page.</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">Be sure to
+look for "NEW" next to a variety of ministries! These are NEW to the
+parish and provide additional opportunities to serve.</span></div>
 
 <div><br></div>
 
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Be sure to
-  look for &#x201c;NEW&#x201d; next to a variety of ministries!  These
-  are NEW to the parish and provide additional opportunities to
-  serve.&#xa0;&#xa0;</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">If you are using your phone for online stewardship, we suggest that you hold your phone sideways (landscape); the wide screen makes it easier to see the form.</span></div>
 
 <div><br></div>
-<ol>
-{one-big-family-ministries-link}
-</ol>
+
+<div align="center">
+    <span style="font-size: 14px; color: rgb(0, 0, 0);">Click the link below to begin your household's</span><br />
+    <span style="font-size: 18px; color: rgb(0, 112, 192);">{bounce_url}</span><br />
+</div>
+
 <div><br></div>
-<div><span style="font-size: 20px; color: rgb(0, 0, 0); font-weight: bold;">Part 2: Generosity</span></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Once
-    you&#x2019;ve completed your family's ministry form, click on the
-    link below to make your 2021 financial pledge.</span></div>
-<div><br></div>
-<div align="center"><span style="font-size: 18px; color: rgb(0, 112, 192);">{family_pledge_link}</span></div>
-<div><br></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">THANK YOU FOR PARTICIPATING in the 2021 Annual Stewardship Renewal!</span></div>
+
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);"><strong>Thank
+    you in advance for completing your 2021 Epiphany Stewardship
+    Renewal!</strong></span></div>
 <br>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">In gratitude,</span></div>
-<div><span style="font-size: 16px; color: rgb(0, 0, 0);">Stewardship &amp; Evangelization Committee</span></div>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">In gratitude,</span></div><br>
+<div><span style="font-size: 14px; color: rgb(0, 0, 0);">Stewardship &amp; Evangelization Committee</span></div>
 <div><br></div>
+
 <div>
-<span style="font-size: 13px; color: rgb(0, 0, 0);">If you have any
+<span style="font-size: 14px; color: rgb(0, 0, 0);">If you have any
   questions regarding this email or the information herein, please
-  contact ____________, Director of Parish Engagement at +1 502-_________</span>
+  contact Angie Fox, Director of Parish Engagement, <a href="mailto:angie@epiphanycatholicchurch.org"
+  target="_blank" style="font-size: 14px; color: rgb(5, 99, 193);
+  text-decoration: none; font-weight: normal; font-style:
+  normal;">angie@epiphanycatholicchurch.org</a>, +1 502-780-1012.</span>
 </div>
 <div><br></div>
 </div></div>
@@ -445,7 +451,7 @@ font-family: ''; font-style: normal; font-weight: 400; src: local(''), local('')
 <tbody>
 <tr>
 <td align="center" valign="top" style="padding-top: 10px; padding-bottom: 10px;">
-<div class="publish-container">  <img alt="" class="" style="display: block; height: auto !important; max-width: 100% !important;" width="261" border="0" hspace="0" vspace="0" src="https://files.constantcontact.com/f86c33b3701/6b637ea3-c568-4b65-86ec-cf69eaf8574a.png">
+<div class="publish-container">  <img alt="" class="" style="display: block; height: auto !important; max-width: 100% !important;" width="150" border="0" hspace="0" vspace="0" src="https://files.constantcontact.com/f86c33b3701/6b637ea3-c568-4b65-86ec-cf69eaf8574a.png">
 </div>
 </td>
 </tr>
